--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <li class="nav-item" data-target="pricing">
           <i class="fas fa-tag"></i> Pricing
         </li>
+        <li class="nav-item" data-target="contracts">
+            <i class="fas fa-tag"></i> Contracts
+          </li>
         <li class="nav-item" data-target="reports">
           <i class="fas fa-chart-bar"></i> Reports
         </li>
@@ -631,6 +634,7 @@
   <script src="js/recipes.js"></script>
   <script src="js/production.js"></script>
   <script src="js/pricing.js"></script>
+  <script src="js/contracts.js"></script>
   <script src="js/reports.js"></script>
   <script src="js/app.js"></script>
 </body>
