--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
         <li class="nav-item" data-target="pricing">
           <i class="fas fa-tag"></i> Pricing
         </li>
-        <li class="nav-item" data-target="contracts">
-            <i class="fas fa-tag"></i> Contracts
-          </li>
         <li class="nav-item" data-target="reports">
           <i class="fas fa-chart-bar"></i> Reports
         </li>
@@ -629,13 +626,13 @@
   </div>
 
   <!-- JavaScript Files -->
-  <script src="js/data.js"></script>
-  <script src="js/inventory.js"></script>
-  <script src="js/recipes.js"></script>
-  <script src="js/production.js"></script>
-  <script src="js/pricing.js"></script>
-  <script src="js/contracts.js"></script>
-  <script src="js/reports.js"></script>
+  <!-- Core dependencies first -->
+  <script src="js/app/core.js"></script>
+  <script src="js/app/helpers.js"></script>
+  <script src="js/app/dataManagement.js"></script>
+  <script src="js/app/dashboard-helpers.js"></script>
+
+  <!-- Router comes last -->
   <script src="js/app.js"></script>
 </body>
 </html>
